--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,12 @@ jobs:
 
     - name: remove base linear_model 
       run: rm -rf linear_model
-
+    
+    - name: python version
+      run: python --version
+    
+    - name: neofetch
+      run: neofetch
 #    - name: pip install reqs
 #      run: pip install -r requirements.txt 
       
